Ajuste API Gateway AWS

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 PORT=3000
 CHOKIDAR_USEPOLLING=true
 
-REACT_APP_PARTNER_HOST=http://localhost:8081
-REACT_APP_STANDARD_HOST=http://localhost:8082
-REACT_APP_PROCESS_HOST=http://localhost:8083
+REACT_APP_PARTNER_HOST=https://grcgdrvx60.execute-api.us-east-1.amazonaws.com/sigo-partner
+REACT_APP_STANDARD_HOST=https://grcgdrvx60.execute-api.us-east-1.amazonaws.com/sigo-standard
+REACT_APP_PROCESS_HOST=https://grcgdrvx60.execute-api.us-east-1.amazonaws.com/sigo-process
