--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,13 @@
 .env.test.local
 .env.production.local
 
+#amplify
+amplify/\#current-cloud-backend
+amplify/.config/local-*
+amplify/mock-data
+amplify/backend/amplify-meta.json
+amplify/backend/awscloudformation
+
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
